# stm32f411

./: .gitignore  PROJECT_DOCS_CONVENTION.md  README.md  notes.txt  stm32_projects_book.tex
.claude/: SUMMARY.md
.github/workflows/: build.yml
blinky/: CMakeLists.txt  README.md
blinky/src/: main.c
cmsis_adxl_sdcard/: CMakeLists.txt  README.md
cmsis_adxl_sdcard/docs/: README.md  cmsis_adxl_sdcard_chapter.tex  cmsis_adxl_sdcard_chapter_body.tex
cmsis_adxl_sdcard/inc/: sd_raw_log.h  sdcard_spi.h  spi2_sd.h  systick_msec_delay.h
cmsis_adxl_sdcard/ld/: stm32_flash.ld
cmsis_adxl_sdcard/src/: main.c  sdcard_spi.c  uart.c
cmsis_adxl_sdcard_fatfs/: CMakeLists.txt  README.md
cmsis_adxl_sdcard_fatfs/docs/: README.md  cmsis_adxl_sdcard_fatfs_chapter.tex  cmsis_adxl_sdcard_fatfs_chapter_body.tex
cmsis_adxl_sdcard_fatfs/inc/: adxl345.h  fatfs_log.h  sdcard_spi.h
cmsis_adxl_sdcard_fatfs/src/: adc.c  fatfs_log.c  main.c  sdcard_spi.c  spi2_sd.c
cmsis_adxl_sdcard_fatfs/src/fatfs/: diskio_port.c
cmsis_blinky/: CMakeLists.txt
cmsis_blinky/src/: main.c  stm32f4x_startup.c
cmsis_button/: CMakeLists.txt  README.md
cmsis_button/inc/: button.h  gpio.h
cmsis_button/ld/: stm32_flash.ld
cmsis_button/src/: button.c  gpio.c  main.c  stm32f4x_startup.c  system_init.c
cmsis_dac/: CMakeLists.txt  README.md
cmsis_dac/inc/: uart.h
cmsis_dac/src/: adc.c  dac.c  main.c  uart.c
cmsis_max6675/: CMakeLists.txt
cmsis_max6675/inc/: max6675.h  spi.h
cmsis_max6675/src/: led.c  main.c  max6675.c  spi.c  uart.c
cmsis_max6675_sdcard/: CMakeLists.txt  README.md
cmsis_max6675_sdcard/inc/: system_init.h  uart.h
cmsis_max6675_sdcard/ld/: stm32_flash.ld
cmsis_max6675_sdcard/src/: main.c  sd_raw_log.c  stm32f4x_startup.c
cmsis_max6675_sdcard_fatfs/: CMakeLists.txt  README.md
cmsis_max6675_sdcard_fatfs/inc/: fatfs_log.h
cmsis_max6675_sdcard_fatfs/src/: fatfs_log.c  main.c
cmsis_max6675_sdcard_fatfs_scheduler/: README.md
cmsis_max6675_sdcard_fatfs_scheduler/src/: main.c
cmsis_max6675_sdcard_raw_ring/: CMakeLists.txt  README.md
cmsis_max6675_sdcard_raw_ring/src/: main.c
cmsis_max6675_sdcard_raw_ring_o1/: CMakeLists.txt  README.md
cmsis_max6675_sdcard_raw_ring_o1/src/: main.c
cmsis_max6675_sdcard_raw_ring_o1/tools/: decode_raw_ring_windows.py  inspect_meta_windows.py
cmsis_spi/: CMakeLists.txt
cmsis_spi/inc/: adc.h  adx1345.h  adxl345.h  spi.h
cmsis_spi/src/: adc.c  adx1345.c  adxl345.c  main.c  spi.c  stm32f4x_startup.c  systick_msec_delay.c  uart.c
cmsis_spi_1ms/: CMakeLists.txt
cmsis_spi_1ms/inc/: dac.h
cmsis_spi_1ms/src/: dac.c  main.c
cmsis_sysclk_blinky/: CMakeLists.txt
cmsis_sysclk_blinky/inc/: delay.h  gpio.h  systick_msec_delay.h
cmsis_sysclk_blinky/src/: delay.c  gpio.c  main.c  stm32f4x_startup.c  system_init.c  systick_msec_delay.c
cmsis_tim2clk_blinky/: CMakeLists.txt
cmsis_tim2clk_blinky/inc/: tim2_1hz_init.h
cmsis_tim2clk_blinky/ld/: stm32_flash.ld
cmsis_tim2clk_blinky/src/: gpio.c  main.c  stm32f4x_startup.c  system_init.c  tim2_1hz_init.c
cmsis_uart1/: CMakeLists.txt  README.md
cmsis_uart1/ld/: stm32_flash_old.ld
cmsis_uart1/src/: main.c  stm32f4x_startup.c  systick_msec_delay.c  uart.c
cmsis_uart2/: CMakeLists.txt  README.md
cmsis_uart2/ld/: stm32_flash.ld
cmsis_uart2/src/: led.c  main.c  uart.c
docs/: HANDOFF.md  HANDOFF_TEMPLATE.md  LATEX_BOOK_README.md
docs/latex/: book_preamble.tex
docs/prs/: 2026-02-25-uart-write-todo.md
shared/adc/: README.md
shared/adc/src/: adc.c
shared/fatfs_core/: README.md
shared/fatfs_log_common/: README.md
shared/fatfs_log_common/inc/: fatfs_log.h
shared/max6675/: README.md
shared/uart_common/: README.md
(+24 files in other folders)
